# ctfbenchmark

./: .gitignore  AUDIT_REPORT.md  CLAUDE.md  CONTRIBUTING.md  README.md  droplet.yaml  pyproject.toml
.claude/: mcp.json
.claude/skills/: git-workflow.md
backend/droplet/: __init__.py  app.py  database.py  datasets.py  events.py  logging_config.py  manager.py  models.py
datasets/: CLAUDE.md  __init__.py  droplet.yaml
datasets/demo-xbow/: droplet.yaml
datasets/preprocessor/: __init__.py  __main__.py  agent.py  cli.py  generator.py  xbow.py
datasets/preprocessor/base/: __init__.py  (+3 more)
docs/: api.md  benchmark-design-review.md  dataset-preprocessor.md  frontend-backend-requirements.md  implementation-audit.md  mcp-setup.md
examples/: agent_solve_example.py  list_challenges.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  styles.css
logs/: droplet-events.jsonl
scripts/: configure-docker-daemon-proxy.sh  dev-backend.sh  prepull-demo-images.sh  prestart-challenges.sh  stop-challenges.sh
scripts/ops/: clean-runtime.sh  doctor.sh  prefetch-tui.py  show-prefetch-progress.sh
scripts/platform/: start.sh  stop.sh
sdk/droplet_sdk/: __init__.py  cli.py  client.py  mcp_server.py
tests/: conftest.py
tests/integration/: test_api_contract.py  test_api_docker_e2e.py  test_challenge_display.py  test_end_to_end.py
tests/unit/: test_cli.py  test_concurrency.py  test_dataset_preprocessor.py  test_datasets.py  test_events.py  test_logging.py  test_manifest.py  test_persistence.py  test_runtime.py  test_stats.py
(+13 files in other folders)
