[project]
name = "droplet"
version = "0.5.1"
description = "Black-box cybersecurity benchmark platform for external agents"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlmodel>=0.0.22",
  "pydantic-settings>=2.4.0",
  "pyyaml>=6.0.2",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]
mcp = [
  "fastmcp>=2.0.0",
]

[project.scripts]
droplet-mcp = "droplet_sdk.mcp_server:mcp.run"
droplet = "droplet_sdk.cli:main"

[tool.pytest.ini_options]
pythonpath = ["backend", "sdk"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"


[tool.setuptools.packages.find]
where = ["backend", "sdk"]
